@@ -231,7 +231,7 @@ public class DatabaseService implements DatabaseServiceInterface {
         List<FileInfo> backupList = this.getBackupList();
         backupList.sort(Comparator.comparing(FileInfo::getModificationDate).reversed());
 
-        Path latestExport = Path.of(backupList.get(0).getFilePath());
+        Path latestExport = Path.of(backupList.getFirst().getFilePath());
         try {
             executeDatabaseScript(latestExport);
         } catch (IOException e) {
@@ -378,7 +378,7 @@ public class DatabaseService implements DatabaseServiceInterface {
         List<FileInfo> backupList = this.getBackupList();
         List<Pair<FileInfo, Boolean>> deletedFiles = new ArrayList<>();
         if (!backupList.isEmpty()) {
-            FileInfo lastBackup = backupList.get(backupList.size() - 1);
+            FileInfo lastBackup = backupList.getLast();
             try {
                 Files.deleteIfExists(Path.of(lastBackup.getFilePath()));
                 deletedFiles.add(Pair.of(lastBackup, true));
@@ -401,7 +401,7 @@ public class DatabaseService implements DatabaseServiceInterface {
                     Comparator.comparing(
                             p -> p.getFileName().substring(7, p.getFileName().length() - 4)));
 
-            FileInfo oldestFile = filteredBackupList.get(0);
+            FileInfo oldestFile = filteredBackupList.getFirst();
             Files.deleteIfExists(Path.of(oldestFile.getFilePath()));
             log.info("Deleted oldest backup: {}", oldestFile.getFileName());
         } catch (IOException e) {
